adding the login ang register headers

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -21,6 +21,10 @@
         <!-- Sing in  Form -->
         <section class="sign-in">
             <div class="container">
+                 <header style="">
+                        <h2 class="form-title" style="padding: 50px; color:#ffffff;">Login</h2>
+
+    </header>
                 <div class="signin-content">
                     <div class="signin-image">
                         <figure><img src="./loginandsignupassets/images/signin-image.jpg" alt="sing up image"></figure>
@@ -28,7 +32,6 @@
                     </div>
 
                     <div class="signin-form">
-                        <h2 class="form-title">Login</h2>
                         <form method="POST" class="register-form" id="login-form">
                             <div class="form-group">
                                 <label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
