--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -12,22 +12,22 @@
 
     <!-- Main css -->
     <link rel="stylesheet" href="./loginandsignupassets/css/style.css">
-  
+  <style>
+     
+  </style>
 </head>
 
 <body>
-    <nav>
-
-    </nav>
-    <div class="main">
-       
+    <div class="main" style="">
         <!-- Sign up form -->
         <section class="signup">
             <div class="container">
+                  <header style="">
+                        <h2 class="form-title" style="padding: 50px; color:#ffffff;">Sign up</h2>
 
+    </header>
                 <div class="signup-content">
                     <div class="signup-form">
-                        <h2 class="form-title">Sign up</h2>
                         <!--shows the errors mesage -->
                          {{#if errorsList}}
                              <ul class="errors-list">
