--- a/public/loginandsignupassets/css/style.css
+++ b/public/loginandsignupassets/css/style.css
@@ -811,5 +811,13 @@ label.valid:after {
   color: #f8f8f8;
   padding: 5px;
 }
+header {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../images/banner.jpg);
+  height: 200px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 
 /*# sourceMappingURL=style.css.map */
