--- a/views/index.hbs
+++ b/views/index.hbs
@@ -37,10 +37,9 @@
             {{#if errors}}
            <div class="errors">
 
-               <ul>
+               <ul style="list-style-type: none;">
             {{#each errors}}
-
-                   <li >{{this.msg}}</li>
+                <li>{{this.msg}}</li>
             {{/each}}
                </ul>
            </div>
@@ -55,9 +54,7 @@
                             <ul>
                                 <li><a href="/">Home</a></li>
                                 <li><a href="#contactus">Contact Us</a></li>
-                                <li><a href="/signup">Sign Up</a>
-                                <li><a href="/login">Log In</a></li>
-
+                                
                     </li>
                 </ul>
     </div>
@@ -212,8 +209,6 @@
                     <h3>Nuhu</h3>
                     <p>Excellent Service.They dropped off shirts at my place, just to be nice</p>
                 </li>
-
-
             </ul>
         </div>
     </section>
@@ -234,7 +229,6 @@
             </ul>
         </div>
     </section>
-
     <!-- Footer -->
     <footer id="footer">
         <a id="contactus">
