--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -19,9 +19,15 @@
                     <div class="col-md-8 col-10 my-5">
                         <div class="row justify-content-center px-3 mb-3 "> <img id="logo" src="http://sns-hub.com/img/admin.png"> </div>
                         <h3 class="mb-5 text-center heading">Login To CMC</h3>
+                           {{#if error}}
+                           <div class="errors">
+                              <p>{{this.error}}</p>
+                             
+                           </div>
+                          {{/if}}
                        <form action="/admin" method="POST">
                             <div class="form-group"> <label class="form-control-label text-muted">Username</label> <input type="text" id="email" name="email" placeholder="Phone no or email id" class="form-control"> </div>
-                        <div class="form-group"> <label class="form-control-label text-muted">Password</label> <input type="password" id="psw" name="psw" placeholder="Password" class="form-control"> </div>
+                        <div class="form-group"> <label class="form-control-label text-muted">Password</label> <input type="password" id="psw" name="password" placeholder="Password" class="form-control"> </div>
                         <div class="row justify-content-center my-3 px-3"> <button class="btn-block btn-color">Submit</button> </div>
                        </form>
                     </div>
