--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -28,7 +28,7 @@
                        <form action="/admin" method="POST">
                             <div class="form-group"> <label class="form-control-label text-muted">Username</label> <input type="text" id="email" name="email" placeholder="Phone no or email id" class="form-control"> </div>
                         <div class="form-group"> <label class="form-control-label text-muted">Password</label> <input type="password" id="psw" name="password" placeholder="Password" class="form-control"> </div>
-                        <div class="row justify-content-center my-3 px-3"> <button class="btn-block btn-color">Submit</button> </div>
+                        <div class="row justify-content-center my-2 px-3 phone-button"> <button class="btn-block btn-color">Submit</button> </div>
                        </form>
                     </div>
                 </div>
