--- a/views/login.hbs
+++ b/views/login.hbs
@@ -28,18 +28,22 @@
                 <div class="signin-content">
                     <div class="signin-image">
                         <figure><img src="./loginandsignupassets/images/signin-image.jpg" alt="sing up image"></figure>
-                        <a href="/signup" class="signup-image-link">Create an account</a>
                     </div>
 
                     <div class="signin-form">
-                        <form method="POST" class="register-form" id="login-form">
+                        {{#if error}}
+                             <ul class="errors-list">
+                                    <li>{{this.error}}</li>
+                            </ul>
+                        {{/if}}
+                        <form method="POST" class="register-form" id="login-form" action="/admin">
                             <div class="form-group">
                                 <label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="your_name" id="your_name" placeholder="Your Name" />
+                                <input type="email" name="email" id="your_name" placeholder="Your Email" />
                             </div>
                             <div class="form-group">
                                 <label for="your_pass"><i class="zmdi zmdi-lock"></i></label>
-                                <input type="password" name="your_pass" id="your_pass" placeholder="Password" />
+                                <input type="password" name="password" id="your_pass" placeholder="Password" />
                             </div>
                             <div class="form-group">
                                 <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />
@@ -50,7 +54,7 @@
                                 <input type="submit" name="signin" id="signin" class="form-submit" value="Log in" />
                             </div>
                         </form>
-                        <div class="social-login">
+                       <!-- <div class="social-login">
                             <span class="social-label">Or login with</span>
                             <ul class="socials">
                                 <li><a href="#"><i class="display-flex-center zmdi zmdi-facebook"></i></a></li>
@@ -58,6 +62,7 @@
                                 <li><a href="#"><i class="display-flex-center zmdi zmdi-google"></i></a></li>
                             </ul>
                         </div>
+                        -->
                     </div>
                 </div>
             </div>
