--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1397,6 +1397,7 @@
                 <h3 class="card-title">Latest Orders</h3>
 
                 <div class="card-tools">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum mollitia odio cumque magnam, esse consequuntur est repellat ipsum, vero fugit nihil provident vel nam ut possimus labore iste, sit cupiditate?
                   <button type="button" class="btn btn-tool" data-card-widget="collapse">
                     <i class="fas fa-minus"></i>
                   </button>
@@ -1720,6 +1721,11 @@
 <script src="../adminstyles/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
 <!-- AdminLTE App -->
 <script src="../adminstyles/dist/js/adminlte.js"></script>
+<!-- Axios -->
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<!-- App Js-->
+<script src="../adminstyles/js/app.js"></script>
+
 
 <!-- PAGE PLUGINS -->
 <!-- jQuery Mapael -->
