--- a/views/index.hbs
+++ b/views/index.hbs
@@ -54,6 +54,7 @@
                             <ul>
                                 <li><a href="/">Home</a></li>
                                 <li><a href="#contactus">Contact Us</a></li>
+                                <li><a href="#contactus">Sign up</a></li>
                                 
                     </li>
                 </ul>
