--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1395,7 +1395,7 @@
             <!-- TABLE: LATEST ORDERS -->
             <div class="card">
               <div class="card-header border-transparent">
-                <h3 class="card-title">Latest Requests</h3>
+                <h3 class="card-title">Requests</h3>
 
                 <div class="card-tools">
                   <button type="button" class="btn btn-tool" data-card-widget="collapse">
