--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -43,7 +43,7 @@
                         {{/if}}
                     <!--/shows the errors mesage -->
 
-                        <form method="POST" class="register-form" id="register-form"  autocomplete="off" action="/signup">
+                        <form method="POST" class="register-form" id="register-form"  autocomplete="off" action="/register">
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
                                 <input type="text" name="name" id="name" placeholder="Your Name" />
