--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -36,7 +36,7 @@
                                     <li>{{this.error}}</li>
                             </ul>
                         {{/if}}
-                        <form method="POST" class="register-form" id="login-form" action="/admin" autocomplete="off">
+                        <form method="POST" class="register-form" id="login-form" action="/login" autocomplete="off">
                             <div class="form-group">
                                 <label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
                                 <input type="email" name="email" id="your_name" placeholder="Your Email" />
