--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -54,9 +54,8 @@
                             <ul>
                                 <li><a href="/">Home</a></li>
                                 <li><a href="#contactus">Contact Us</a></li>
-                                <li><a href="/signup">Register</a></li>
+                                <li><a href="/register">Register</a></li>
                                 <li><a href="/login">Login</a></li>
-                                
                     </li>
                 </ul>
     </div>
