--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,9 @@
-<h1>Welcome home</h1>
+<div class="col-md-8">
+hello this is home
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias facere ipsa inventore fugit, ad commodi dolor autem esse corporis aperiam neque, enim eveniet libero eligendi distinctio minus, nobis quae cum?
+</div>
+<div class="col-md-4">
+Another home
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat tenetur suscipit necessitatibus eos, quia cupiditate esse harum laudantium? Ullam quo dignissimos quos suscipit nemo culpa. Accusantium cupiditate aperiam laboriosam molestiae?
+</div>
+
