--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -843,13 +843,13 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1 class="m-0">Dashboard v2</h1>
+            <h1 class="m-0">Dashboard</h1>
             
           </div><!-- /.col -->
           <div class="col-sm-6" id="disable">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">Dashboard v2</li>
+              <li class="breadcrumb-item active">Dashboard</li>
             </ol>
           </div><!-- /.col -->
         </div><!-- /.row -->
@@ -883,7 +883,7 @@
               <span class="info-box-icon bg-danger elevation-1"><i class="fas fa-thumbs-up"></i></span>
 
               <div class="info-box-content">
-                <span class="info-box-text">Likes</span>
+                <span class="info-box-text">Requests</span>
                 <span class="info-box-number">41,410</span>
               </div>
               <!-- /.info-box-content -->
@@ -900,7 +900,7 @@
               <span class="info-box-icon bg-success elevation-1"><i class="fas fa-shopping-cart"></i></span>
 
               <div class="info-box-content">
-                <span class="info-box-text">Sales</span>
+                <span class="info-box-text">Pending</span>
                 <span class="info-box-number">760</span>
               </div>
               <!-- /.info-box-content -->
@@ -913,7 +913,7 @@
               <span class="info-box-icon bg-warning elevation-1"><i class="fas fa-users"></i></span>
 
               <div class="info-box-content">
-                <span class="info-box-text">New Members</span>
+                <span class="info-box-text">Confirmed</span>
                 <span class="info-box-number">2,000</span>
               </div>
               <!-- /.info-box-content -->
@@ -926,21 +926,13 @@
 
         <!-- Main row -->
         <div class="row">
-          <!-- Left col -->
-          <div class="col-md-8">
-          
-            <!-- /.card -->
-            <div class="row">
-              
-        
-            </div>
-            <!-- /.row -->
-
-          </div>
+            {{{body}}}
           </div>
         </div>
         <!-- /.row -->
-      </section></div><!--/. container-fluid -->
+      </section>
+      </div>
+      <!--/. container-fluid -->
     
     <!-- /.content -->
   <div id="sidebar-overlay"></div></div>
@@ -949,7 +941,7 @@
  
   <!-- Main Footer -->
   <footer class="main-footer">
-    <strong>Copyright © 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
+    <strong>Copyright © 2014-2021 <a href="#">Pick And Drop</a>.</strong>
     All rights reserved.
     <div class="float-right d-none d-sm-inline-block">
       <b>Version</b> 3.1.0
