--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,9 +1,17 @@
 <div class="col-md-8">
-hello this is home
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias facere ipsa inventore fugit, ad commodi dolor autem esse corporis aperiam neque, enim eveniet libero eligendi distinctio minus, nobis quae cum?
+    <h3>Comin Soon</h3>
+    {{#if requests}}
+        <ul>
+            {{#each requests}}
+            <li>{{this.phone}}</li>
+            <p>----{{this.message}}</p>
+            {{/each}}
+        </ul>
+    {{else}}
+        <p>no requests Yet</p>
+    {{/if}}
 </div>
 <div class="col-md-4">
-Another home
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat tenetur suscipit necessitatibus eos, quia cupiditate esse harum laudantium? Ullam quo dignissimos quos suscipit nemo culpa. Accusantium cupiditate aperiam laboriosam molestiae?
+    <h3>Lorem</h3>
 </div>
 
