--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,15 +1,62 @@
 <div class="col-md-8">
-    <h3>Comin Soon</h3>
-    {{#if requests}}
-        <ul>
-            {{#each requests}}
-            <li>{{this.phone}}</li>
-            <p>----{{this.message}}</p>
-            {{/each}}
-        </ul>
-    {{else}}
-        <p>no requests Yet</p>
-    {{/if}}
+    
+            <!-- TABLE: LATEST ORDERS -->
+            <div class="card">
+              <div class="card-header border-transparent">
+                <h3 class="card-title">Requests</h3>
+
+                <div class="card-tools">
+                  <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                    <i class="fas fa-minus"></i>
+                  </button>
+                  <button type="button" class="btn btn-tool" data-card-widget="remove">
+                    <i class="fas fa-times"></i>
+                  </button>
+                </div>
+              </div>
+              <!-- /.card-header -->
+            
+              <div class="card-body p-0">
+                <div class="table-responsive">
+                  <table class="table m-0">
+                    <thead>
+                    <tr>
+                      <th>Request ID</th>
+                      <th>Phone</th>
+                      <th>Status</th>
+                      <th>Message</th>
+                      <th>Date</th>
+
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {{#if requests}}
+                    {{#each requests}}
+                        <tr>
+                          <td><a href="">REQ {{@index}}</a></td>
+                          <td>0{{this.phone}}</td>
+                          <td><span class="badge badge-success">Pending</span></td>
+                          <td>{{this.message}}</td>
+                          <td>{{this.date}}</td>
+
+                      </tr>
+                    {{/each}}
+                    {{else}}
+                      <p>no requests</p>
+                    {{/if}}
+                    </tbody>
+                  </table>
+                </div>
+                <!-- /.table-responsive -->
+              </div>
+              <!-- /.card-body -->
+              <div class="card-footer clearfix">
+                <a href="javascript:void(0)" class="btn btn-sm btn-info float-left">Place New Order</a>
+                <a href="javascript:void(0)" class="btn btn-sm btn-secondary float-right">View All Orders</a>
+              </div>
+              <!-- /.card-footer -->
+            </div>
+            <!-- /.card -->
 </div>
 <div class="col-md-4">
     <h3>Lorem</h3>
