authorisation of the home page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -54,8 +54,16 @@
                             <ul>
                                 <li><a href="/">Home</a></li>
                                 <li><a href="#contactus">Contact Us</a></li>
+                           
+                                {{#if currentUser}}
+                                   <li><a href="/logout">Logout</a></li>
+                                   <li><a href="/home">Home</a></li>
+                                {{else}}
                                 <li><a href="/register">Register</a></li>
-                                <li><a href="/login">Login</a></li>
+                                <li><a href="/login">Login</a></li> 
+                                {{/if}}
+
+
                     </li>
                 </ul>
     </div>
