--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -51,8 +51,8 @@
               </div>
               <!-- /.card-body -->
               <div class="card-footer clearfix">
-                <a href="javascript:void(0)" class="btn btn-sm btn-info float-left">Place New Order</a>
-                <a href="javascript:void(0)" class="btn btn-sm btn-secondary float-right">View All Orders</a>
+                <a href="javascript:void(0)" class="btn btn-sm btn-info float-left">Make a request</a>
+                <a href="javascript:void(0)" class="btn btn-sm btn-secondary float-right">View All Requests</a>
               </div>
               <!-- /.card-footer -->
             </div>
