--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -884,7 +884,7 @@
 
               <div class="info-box-content">
                 <span class="info-box-text">Requests</span>
-                <span class="info-box-number">41,410</span>
+                <span class="info-box-number">{{totalRequests}}</span>
               </div>
               <!-- /.info-box-content -->
             </div>
