--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,6 +9,8 @@
     <title>Mobile Wet and dry cleaners</title>
     <meta charset="utf-8" />
     <meta name="theme-color" content="#ef5e4a" />
+     <meta http-equiv="refresh" content="5; URL=https://citymobilewetanddrycleaners.herokuapp.com/">
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
