--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,9 +9,6 @@
     <title>Mobile Wet and dry cleaners</title>
     <meta charset="utf-8" />
     <meta name="theme-color" content="#ef5e4a" />
-     <meta http-equiv="refresh" content="5; URL=https://citymobilewetanddrycleaners.herokuapp.com/">
-
-
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <!--favicon-->
@@ -269,7 +266,7 @@
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <div class="container" style="background-color:rgba(43,52,61, 0.9)" onsubmit="getData()">
-                    <form action="/" method="POST" id="Myform" onsubmit="getData()">
+                    <form action="/request" method="POST" id="Myform" onsubmit="getData()">
                         <label for="Phone number">Phone Number</label>
                         <input type="text" name="phone"  placeholder="Phone Number" required />
                         <label for="message">Optional Message</label>
