saving users date from the application side

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -272,6 +272,7 @@
                         <label for="message">Optional Message</label>
                         <textarea name="message" id="" cols="15" rows="5"></textarea>
                         <br>
+                        <input type="" name="date">
                         <button id="save-button" type="submit" class="button button-primary" value="submit">Submit</button>
                     </form>
                 </div>
