--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -33,8 +33,8 @@
                     {{#if requests}}
                     {{#each requests}}
                         <tr>
-                          <td><a href="">REQ {{@index}}</a></td>
-                          <td>0{{this.phone}}</td>
+                          <td><a href="requests/{{this._id}}" target="_blank">REQ {{@index}}</a></td>
+                          <td>{{this.phone}}</td>
                           <td><span class="badge badge-success">Pending</span></td>
                           <td>{{this.message}}</td>
                           <td>{{this.date}}</td>
