--- a/views/requests/show.handlebars
+++ b/views/requests/show.handlebars
@@ -4,7 +4,7 @@
       <!-- Default box -->
       <div class="card">
         <div class="card-header">
-          <h3 class="card-title">Projects Detail</h3>
+          <h3 class="card-title">Request Details</h3>
 
           <div class="card-tools">
             <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
@@ -27,7 +27,7 @@
                       <div class="user-block">
                         <img class="img-circle img-bordered-sm" src="../adminstyles/dist/img/avatar.png" alt="User Image">
                         <span class="username">
-                          <a href="#">Sarah Ross</a>
+                          <a href="#">USER NAME</a>
                         </span>
                         <span class="description">Request Sent on - {{request.date}}</span>
                       </div>
@@ -35,31 +35,18 @@
                       <p>
                        {{request.message}}
                       </p>
-                      <p>
-                        <a href="#" class="link-black text-sm"><i class="fas fa-link mr-1"></i> Demo File 2</a>
-                      </p>
-                    </div>
-
-                  
+                     
+                    </div> 
                 </div>
               </div>
             </div>
             <div class="col-12 col-md-12 col-lg-4 order-1 order-md-2">
-              <h3 class="text-primary"><i class="fas fa-paint-brush"></i> AdminLTE v3</h3>
-              <p class="text-muted">Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terr.</p>
-              <br>
-              <div class="text-muted">
-                <p class="text-sm">Client Company
-                  <b class="d-block">Deveint Inc</b>
-                </p>
-                <p class="text-sm">Project Leader
-                  <b class="d-block">Tony Chicken</b>
-                </p>
-              </div>
-
-              
               <div class="text-center mt-5 mb-3">
-                <a href="#" class="btn btn-sm btn-primary">Add files</a>
+                <form action="/request/approve" method="POST" style="display: inline; ">
+                    <input type="hidden" name="requestid" value={{request._id}}>
+                    <input type="hidden" name="requestStatus" value="approved">
+                    <button  class="btn btn-sm btn-primary" type="submit">Approve Request</button>
+                </form>
                 <a href="#" class="btn btn-sm btn-warning">Report contact</a>
               </div>
             </div>
