--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -273,6 +273,8 @@
                         <textarea name="message" id="" cols="15" rows="5"></textarea>
                         <br>
                         <input type="hidden" name="date">
+                        <input type="hidden" name="status">
+
                         <button id="save-button" type="submit" class="button button-primary" value="submit">Submit</button>
                     </form>
                 </div>
