--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -35,7 +35,11 @@
                         <tr>
                           <td><a href="requests/{{this._id}}" target="_blank">REQ {{@index}}</a></td>
                           <td>0{{this.phone}}</td>
-                          <td><span class="badge badge-success">Pending</span></td>
+                          <td><span class="badge badge-success">
+                            {{#each status}}
+                              {{this.[0]}}
+                            {{/each}}
+                          </span></td>
                           <td>{{this.message}}</td>
                           <td>{{this.date}}</td>
 
