--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -978,7 +978,5 @@
 <script src="../adminstyles/dist/js/demo.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="../adminstyles/dist/js/pages/dashboard2.js"></script>
-<script>
-</script>
-
+<!-- custom js -->
 </body></html>
