storing requests date as seconds

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -274,7 +274,7 @@
                         <br>
                         <input type="hidden" name="date">
                         <input type="hidden" name="status">
-
+                        <input type="hidden" name="dateInSeconds" class="dateInSeconds">
                         <button id="save-button" type="submit" class="button button-primary" value="submit">Submit</button>
                     </form>
                 </div>
