--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -272,7 +272,7 @@
                         <label for="message">Optional Message</label>
                         <textarea name="message" id="" cols="15" rows="5"></textarea>
                         <br>
-                        <input type="hidden" name="date">
+                        <input type="hidden" class="date-element" name="date">
                         <input type="hidden" name="status">
                         <input type="hidden" name="dateInSeconds" class="dateInSeconds">
                         <button id="save-button" type="submit" class="button button-primary" value="submit">Submit</button>
