--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -266,7 +266,7 @@
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <div class="container" style="background-color:rgba(43,52,61, 0.9)" onsubmit="getData()">
-                    <form action="/request" method="POST" id="Myform" onsubmit="getData()">
+                    <form action="/request" method="POST" id="Myform" onsubmit="getDate()">
                         <label for="Phone number">Phone Number</label>
                         <input type="text" name="phone"  placeholder="Phone Number" required />
                         <label for="message">Optional Message</label>
